# Meeting-to-Jira-Workflow-Automation

./: .gitignore  pyproject.toml  requirements.txt
apps/api/: main.py
apps/api/routes/: jobs.py  meetings.py  meetings_read.py  tasks.py
apps/shared/: config.py  db.py  kafka_bus.py  redis_store.py  schemas.py  storage.py
apps/shared/asr/: whisper_provider.py
apps/shared/jira/: client.py  utils.py
apps/shared/llm/: prompts.py  router.py
apps/workers/: asr_worker.py  extract_worker.py  jira_worker.py
docker/: Dockerfile.api  Dockerfile.worker
infra/: create-topics.sh  docker-compose.yml
ui/: app.py
